--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-react-homeworks",
-  "homepage": "https://AnnySad.github.io/Ignat-HW",
+  "homepage": "https://AnnySad.github.io/HW_HomeWork",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
